# omniscient

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  GIT-RELEASE-GUIDE.md  LICENSE  README.md  RELEASE-CHECKLIST.md  RELEASE-NOTES.md  RELEASE-WORKFLOW.md  SECURITY.md  deny.toml  install.sh  release-tag.sh  release.sh  uninstall.sh
.github/workflows/: ci.yml  snyk.yml
docs/: GIT_ACCOUNT_SWITCHING.md  HACKERNEWS_ANNOUNCEMENT.md  INDEX.md  MULTI_ACCOUNT_GIT.md  PUBLISHING.md  README.md  SNYK_SETUP.md
docs/adr/: ADR-001-fts5-query-sanitization.md  ADR-002-contextual-queries.md  ADR-003-ux-enhancements-frecency-color-highlighting.md  README.md
docs/development/: FTS5-FIX-SUMMARY.md  FTS5-SANITIZATION-IMPLEMENTATION-PLAN.md  Index.md  PHASE2-SUMMARY-PROGRESS.md  PROGRESS.md  PROJECT-SUMMARY.md  START-HERE.md  quick-reference.md  review-checklist.md
docs/planning/: contextual-queries.md  multi-shell-support.md  roadmap.md  specification.md  technical-design.md
examples/: bash_hook.sh  config.toml  zsh_hook.sh
examples/shell_hooks/: zsh_hooks.sh
src/: capture.rs  category.rs  config.rs  error.rs  export.rs  lib.rs  main.rs  models.rs  redact.rs  shell.rs  storage.rs
