[package]
name = "omniscient"
version = "1.1.0"
edition = "2021"
authors = ["Omniscient Contributors"]
description = "CLI command history tracker - never forget a command again"
repository = "https://github.com/daneb/omniscient"
homepage = "https://github.com/daneb/omniscient"
documentation = "https://github.com/daneb/omniscient#readme"
license = "MIT"
keywords = ["cli", "history", "shell", "command", "productivity"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    ".gitignore",
    "*.md",
    "examples/",
    "install.sh",
    "uninstall.sh",
    "release-tag.sh",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.14"
